# kira-hassio-addon

./: .gitignore  repository.json  repository.yaml
kira/kira_app/: README.md  ROADMAP.md  pyproject.toml
kira/kira_app/config/: ha_event_filters.yaml  ha_permissions.yaml  settings.example.toml
kira/kira_app/knowledge/: homeassistant.md  projekte.md  python.md
kira/kira_app/plugins/homeassistant/: README.md  manifest.json  plugin.py
kira/kira_app/plugins/knowledge/: README.md  manifest.json  plugin.py
kira/kira_app/plugins/memory/: README.md  manifest.json  plugin.py
kira/kira_app/plugins/openai/: README.md  manifest.json  plugin.py
kira/kira_app/plugins/openart/: README.md  manifest.json  plugin.py
kira/kira_app/plugins/voice/: README.md  manifest.json  plugin.py
kira/kira_app/prompts/: behaviour.md  greeting.md  humour.md  knowledge.md  openart_kira_style.md  personality.md
kira/kira_app/src/kira/: __init__.py  __main__.py  version.py
kira/kira_app/src/kira/api/: __init__.py  server.py
kira/kira_app/src/kira/audio/: __init__.py  devices.py  media_server.py  player.py  recorder.py  router.py  speech_to_text.py
kira/kira_app/src/kira/automations/: __init__.py
kira/kira_app/src/kira/backup/: __init__.py  service.py
kira/kira_app/src/kira/chat/: __init__.py  parser.py  session.py
kira/kira_app/src/kira/codex/: __init__.py  manager.py
kira/kira_app/src/kira/core/: __init__.py  app.py  cli.py  config.py  logging.py  prompts.py
kira/kira_app/src/kira/desktop/: __init__.py  app.py  avatar_widget.py  chat_widget.py  companion.py  dashboard.py  (+4 more)
(+54 files in other folders)
